--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -33,7 +33,7 @@
     <div class="comments__container container">
         <div class="comments-container__container">
         <h2 class="comments__title">Отзывы выпускников</h2>
-        
+            <div class="mobile-comment-container">
             <ul class="comments-list list">
                 <div class="container_main_comment">
                     <li class="comments-list__main-foto">
@@ -54,19 +54,15 @@
                         і природокористування України
                     </p>
                     <p class="comments-list__description">
-                        За короткий час занять з Оленою я опанувала граматику і
-                        поповнила свій зовсім пустий словниковий запас. З першого ж
-                        заняття я зрозуміла, що знаходжуся у своїй тарілці.
-                        Ми з Оленою стали друзями, тому що її справді хвилювала моя
-                        успішність. Вона стала для мене авторитетом,
-                        проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз
-                        я можу похизуватись тим, що я студент ...
-                        <a href="#"><span>Читать дальше</span> </a>
+                        За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж
+                        заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя
+                        успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз
+                        я можу похизуватись тим, що я студент... <a href="#"><span>Читать дальше</span> </a>
                     </p>
                 </li>
             </ul>
         </div>
-
+        </div >
         <ul class="comments-under__list list">           
             
                 <li class="comments-under__item">
