--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -20,7 +20,7 @@
     margin-bottom: 23px;
   }
   .feature-list__item {
-    display: block;
+    // display: block;
     position: relative;
     font-style: normal;
     font-weight: 500;
@@ -175,15 +175,15 @@
 // =============================================================================================
 // =============================================================================================
 @media screen and (min-width: 768px) {
-  .garant__title {
-    font-style: normal;
-    font-weight: 800;
-    font-size: 26px;
-    line-height: 130%;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 30px;
-  }
+  // .garant__title {
+  //   font-style: normal;
+  //   font-weight: 800;
+  //   font-size: 26px;
+  //   line-height: 130%;
+  //   text-align: center;
+  //   letter-spacing: 0.03em;
+  //   margin-bottom: 30px;
+  // }
   .garants .feature-list__container {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -230,8 +230,12 @@
   }
 
   // =====================================================================2 секция
+  .mobile-comment-container {
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+  }
   .container_main_comment {
-    padding-left: 40px;
+    // padding-left: 40px;
     padding-right: 46px;
   }
   .comments__title {
@@ -246,14 +250,12 @@
   }
   .comments-list {
     display: flex;
-    // padding-top: 40px;
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
   }
   .comments .comments-main-foto__main-foto {
     // outline: 1px solid green;
     min-width: 150px;
     min-height: 150px;
-    margin-top: 50px;
+    // margin-top: 50px;======================================
     margin-right: auto;
     margin-left: auto;
   }
@@ -265,7 +267,7 @@
     line-height: 1.2;
     letter-spacing: 0.08em;
     margin-bottom: 20px;
-    margin-top: 50px;
+    // margin-top: 50px;
     color: var(--orange-color);
   }
   .comments-list .comments-list__info {
@@ -295,15 +297,15 @@
     color: var(--mob-grey-color);
   }
 
-  .comments-list__item {
-    padding-left: auto;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    text-align: left;
-  }
+  // .comments-list__item {
+  //   padding-left: auto;
+  //   padding-right: 40px;
+  //   padding-bottom: 40px;
+  //   text-align: left;
+  // }
 
   .comments-list__description span {
-    display: inline-block;
+    // display: inline-block;
     color: var(--orange-color);
     text-decoration: underline;
   }
@@ -433,14 +435,13 @@
   }
   .comments-list {
     padding-top: 0;
-    margin-right: 195px;
-    margin-left: 167px;
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+    margin-right: 111px;
+    margin-left: 187px;
   }
-  .comments .comments-main-foto__main-foto {
-    min-width: 150px;
-    min-height: 150px;
-  }
+  // .comments .comments-main-foto__main-foto {
+  //   min-width: 150px;
+  //   min-height: 150px;
+  // }
 
   .comments-list__name {
     display: block;
@@ -467,21 +468,21 @@
     width: 30px;
     height: 30px;
     margin-top: 20px;
-    margin-right: auto;
-    margin-left: auto;
+    margin-bottom: 120px;
   }
   .comments-list__description {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 28px;
+    // text-align: center;
     color: var(--mob-grey-color);
   }
 
-  .comments-list__item {
+  .comments-list__item p {
     padding-left: auto;
     padding-right: 112px;
-    padding-bottom: 40px;
+
     text-align: left;
   }
 
@@ -497,7 +498,7 @@
     position: relative;
     margin-right: 0;
     margin-left: 0;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 50px;
     justify-content: center;
     // outline: 1px solid red;
