--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -46,12 +46,12 @@ position: relative;
         padding-left: 98px;
     }
     .choose-list{
-        display:flex;
-        flex-wrap: wrap;
-        flex-direction: row;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     }
     .choose-list-item:not(:last-child){
-        margin-bottom: 30px;
+    margin-bottom: 30px;
     }
     .choose-list-item{
         flex-basis: calc(100%/2 - 20px);
@@ -59,7 +59,15 @@ position: relative;
 }
 @media screen and (min-width: 1344px){
     .choose{
-        width: 1314px;
-       padding: 70px 80px;
+    width: 1314px;
+    padding: 70px 80px;
     }
+    .choose-list{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.choose-list-item{
+    flex-basis: calc(100%/3 - 20px);
+}
 }
