--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -175,15 +175,15 @@
 // =============================================================================================
 // =============================================================================================
 @media screen and (min-width: 768px) {
-  // .garant__title {
-  //   font-style: normal;
-  //   font-weight: 800;
-  //   font-size: 26px;
-  //   line-height: 130%;
-  //   text-align: center;
-  //   letter-spacing: 0.03em;
-  //   margin-bottom: 30px;
-  // }
+  .garant__title {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+  }
   .garants .feature-list__container {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -231,8 +231,36 @@
 
   // =====================================================================2 секция
   .mobile-comment-container {
+    position: relative;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
     padding: 40px;
+  }
+
+  .mobile-comment-container::before {
+    position: absolute;
+    content: '';
+    width: 27px;
+    height: 16px;
+    top: 50%;
+    left: -13px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    // outline: 1px solid teal;
+    background-image: url('../images/arrow_left.svg');
+  }
+
+  .mobile-comment-container::after {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    width: 27px;
+    height: 16px;
+    top: 50%;
+    right: -13px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    // outline: 1px solid teal;
+    background-image: url('../images/arrow_right.svg');
   }
   .container_main_comment {
     // padding-left: 40px;
@@ -313,39 +341,13 @@
   // ==============================================================
   .comments-under__list {
     display: flex;
-    position: relative;
+    // position: relative;
     margin-right: 0;
     margin-left: 0;
     margin-top: 20px;
     margin-bottom: 50px;
     justify-content: center;
     // outline: 1px solid red;
-  }
-  .comments-under__list::before {
-    position: absolute;
-    content: '';
-    width: 27px;
-    height: 16px;
-    top: 19px;
-    left: 0;
-    background-repeat: no-repeat;
-    background-size: contain;
-    // outline: 1px solid teal;
-    background-image: url('../images/arrow_left.svg');
-  }
-
-  .comments-under__list::after {
-    position: absolute;
-    display: inline-block;
-    content: '';
-    width: 27px;
-    height: 16px;
-    top: 19px;
-    right: 0px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    // outline: 1px solid teal;
-    background-image: url('../images/arrow_right.svg');
   }
 
   .comments-under__item:nth-child(-n + 6) {
