--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -481,7 +481,7 @@
     color: var(--mob-grey-color);
   }
 
-  .comments-list__item p {
+  .comments-list__item {
     padding-left: auto;
     padding-right: 112px;
 
@@ -495,41 +495,124 @@
   }
   // ==========================================================================================
   // ==========================================================================================
-  .comments-under__list {
-    display: flex;
+  .mobile-comment-container {
     position: relative;
-    margin-right: 0;
-    margin-left: 0;
-    margin-top: 40px;
-    margin-bottom: 50px;
-    justify-content: center;
-    // outline: 1px solid red;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+    padding: 40px;
   }
-  .comments-under__list::before {
+
+  .mobile-comment-container::before {
     position: absolute;
     content: '';
     width: 27px;
     height: 16px;
-    top: 19px;
-    left: 0;
+    top: 50%;
+    left: -13px;
     background-repeat: no-repeat;
     background-size: contain;
     // outline: 1px solid teal;
     background-image: url('../images/arrow_left.svg');
   }
 
-  .comments-under__list::after {
+  .mobile-comment-container::after {
     position: absolute;
     display: inline-block;
     content: '';
     width: 27px;
     height: 16px;
-    top: 19px;
-    right: 0px;
+    top: 50%;
+    right: -13px;
     background-repeat: no-repeat;
     background-size: contain;
     // outline: 1px solid teal;
     background-image: url('../images/arrow_right.svg');
+  }
+  .container_main_comment {
+    // padding-left: 40px;
+    padding-right: 46px;
+  }
+  .comments__title {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+  .comments-list {
+    display: flex;
+  }
+  .comments .comments-main-foto__main-foto {
+    // outline: 1px solid green;
+    min-width: 150px;
+    min-height: 150px;
+    // margin-top: 50px;======================================
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .comments-list__name {
+    display: block;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+    margin-bottom: 20px;
+    // margin-top: 50px;
+    color: var(--orange-color);
+  }
+  .comments-list .comments-list__info {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.08em;
+    color: var(--grey-color);
+    margin-bottom: 10px;
+  }
+
+  .comments-list .comments-list-icon__vk {
+    // outline: 1px solid green;
+    width: 30px;
+    height: 30px;
+    margin-top: 20px;
+    // margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .comments-list__description {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    color: var(--mob-grey-color);
+  }
+
+  // .comments-list__item {
+  //   padding-left: auto;
+  //   padding-right: 40px;
+  //   padding-bottom: 40px;
+  //   text-align: left;
+  // }
+
+  .comments-list__description span {
+    // display: inline-block;
+    color: var(--orange-color);
+    text-decoration: underline;
+  }
+  // ==================================================
+  // ==============================================================
+  .comments-under__list {
+    display: flex;
+    // position: relative;
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    justify-content: center;
+    // outline: 1px solid red;
   }
 
   .comments-under__item:nth-child(-n + 7) {
