footer desktop finish

--- a/css/main.css
+++ b/css/main.css
@@ -125,8 +125,33 @@ li {
   text-align: center;
 }
 
+.footer {
+  padding-bottom: 2px;
+  background-color: #fff5f6;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-markup {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container-title {
+    margin-bottom: 106px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-container-link {
+    margin-left: 257px;
+  }
+}
+
 .footer-title {
-  font-family: Titan One;
+  font-family: "Titan One", sans-serif;
   font-weight: 400;
   font-size: 34px;
   line-height: 1.147;
@@ -134,8 +159,17 @@ li {
   color: #d41443;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-title {
+    font-size: 58px;
+    line-height: 1.137;
+    letter-spacing: 0.06em;
+  }
+}
+
 .footer-suptitle {
-  font-family: Titan One;
+  margin-bottom: 15px;
+  font-family: "Titan One", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.166;
@@ -143,15 +177,42 @@ li {
   color: #ffa5ba;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-suptitle {
+    font-size: 30px;
+    line-height: 1.133;
+    letter-spacing: 0.04em;
+  }
+}
+
+.footer-social-container {
+  display: flex;
+  width: 151px;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-social-container {
+    margin-left: auto;
+    margin-bottom: 50px;
+  }
+}
+
 .footer-social-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   color: #fff;
   border-radius: 50%;
   background: #fea5bb;
+  transition: background 250ms linear;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background: #d41443;
 }
 
 .footer-social-icon {
@@ -164,6 +225,14 @@ li {
   font-size: 12px;
   line-height: 186%;
   color: #000000;
+  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-text-link {
+    font-size: 16px;
+    line-height: 186%;
+  }
 }
 
 .footer-color-link {
