--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,31 @@
-<footer>
-    <div class="container">
-        <p class="footer-suptitle">homemade ice cream made</p>
-        <h5 class="footer-title">with passion</h5>
+<footer class="footer">
+    <div class="container footer-markup">
+        <div class="footer-container-title">
+            <p class="footer-suptitle">homemade ice cream made</p>
+            <h5 class="footer-title">with passion</h5>
+        </div>
         
-        <ul>
-            <li><a class="footer-social-link" href="#">
-                    <svg class="footer-social-icon" width="20px" height="20px">
-                        <use href="./images/svg/sprite.svg#icon-github"></use>
-                    </svg>
-                </a></li>
-            <li><a class="footer-social-link" href="#">
-                    <svg class="footer-social-icon" width="20px" height="20px">
-                        <use href="./images/svg/sprite.svg#icon-telegram"></use>
-                    </svg>
-                </a></li>
-            <li><a class="footer-social-link" href="#">
-                    <svg class="footer-social-icon" width="20px" height="20px">
-                        <use href="./images/svg/sprite.svg#icon-facebook"></use>
-                    </svg>
-                </a></li>
-        </ul>
-        
-        <p class="footer-text-link">Feel free to contact<a class="footer-color-link" href="#"> +61 (0) 383 766 284</a></p>
+        <div class="footer-container-link">
+            <ul class="footer-social-container">
+                <li class="footer-social-iteam"><a class="footer-social-link" href="#">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/svg/sprite.svg#icon-github"></use>
+                        </svg>
+                    </a></li>
+                <li class="footer-social-iteam"><a class="footer-social-link" href="#">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/svg/sprite.svg#icon-telegram"></use>
+                        </svg>
+                    </a></li>
+                <li class="footer-social-iteam"><a class="footer-social-link" href="#">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+            </ul>
+            
+            <p class="footer-text-link">Feel free to contact<a class="footer-color-link" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a></p>
+        </div>
         
         <span class="footer-text">© 2019 - IceCream. All Rights Reserved.</span>
     </div>
