--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,34 +1,94 @@
+.footer {
+  padding-bottom: 2px;
+  background-color: #fff5f6;
+}
+
+.footer-markup {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+.footer-container-title {
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 106px;
+  }
+}
+
+.footer-container-link {
+  @media screen and (min-width: 1200px) {
+    margin-left: 257px;
+  }
+}
+
 .footer-title {
-  font-family: Titan One;
+  font-family: $secondary-font;
   font-weight: 400;
   font-size: 34px;
   line-height: 1.147;
   text-transform: uppercase;
 
   color: #d41443;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 1.137;
+    letter-spacing: 0.06em;
+  }
 }
 
 .footer-suptitle {
-  font-family: Titan One;
+  margin-bottom: 15px;
+  font-family: $secondary-font;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.166;
   text-transform: uppercase;
 
   color: #ffa5ba;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 1.133;
+    letter-spacing: 0.04em;
+  }
 }
+
+.footer-social-container {
+  display: flex;
+  width: 151px;
+  justify-content: space-between;
+
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+    margin-bottom: 50px;
+  }
+}
+
+// .footer-social-iteam {
+//   display: inline-block;
+// }
 
 .footer-social-link {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
 
   color: #fff;
   border-radius: 50%;
   background: #fea5bb;
+
+  transition: background 250ms linear;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background: #d41443;
 }
 
 .footer-social-icon {
@@ -42,6 +102,12 @@
   line-height: 186%;
 
   color: #000000;
+  letter-spacing: 0.02em;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 186%;
+  }
 }
 
 .footer-color-link {
