поменял класс на section

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,6 +1,6 @@
 <section class="program-section">
   <div class="container">
-    <h2 class="section-title">Наша программа</h2>
+    <h2 class="program-section-title">Наша программа</h2>
     <ul class="program-list">
       <li class="item">
         <h3 class="program-title">1 семестр</h3>
