--- a/css/main.css
+++ b/css/main.css
@@ -78,15 +78,34 @@ li {
 }
 
 .container {
-  width: 1280px;
   margin: 0 auto;
-  padding: 0 20px;
 }
 
 .review .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    width: 320px;
+    padding: 0 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 34px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1280px;
+    padding: 0 20px;
+  }
 }
 
 .review {
