Добавляет стили feature

--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,34 +1,39 @@
 <section class="feature">
-    <!-- <div class="container"> -->
+    <div class="container">
         <h1 class="visually-hidden">Особенности</h1>
-        
-            <ul class=”features__list”>
-                <div class="features__wrapper">
-                <li>
-                    <div class="features__item">
-                        <svg class="features__svg">
-                            <use href="./images/sprite.svg#icon-female_student_rect"></use>
-                        </svg>
-                        <p class="features__item_text">Адаптированная авторская программа ВНО</p>
-                    </div>
+        <ul class=”features__list”>
+            <div class="features__wrapper">
+                <li class="features__item">
+                    <svg class="features__svg" width="58.85" height="60">
+                        <use href="./images/sprite.svg#icon-female_student_rect"></use>
+                    </svg>
+                    <svg class="features__svg_desc" width="100" height="102">
+                        <use href="./images/sprite.svg#icon-female_student_rect_desc"></use>
+                    </svg>
+
+                    <p class="features__item_text">Адаптированная авторская программа ВНО</p>
                 </li>
-                <li>
-                    <div class="features__item">
-                        <svg class="features__svg">
-                            <use href="./images/sprite.svg#icon-mobile_learning_rect"></use>
-                        </svg>
-                        <p class="features__item_text">Современные методики обучения</p>
-                    </div>
+                <li class="features__item">
+                    <svg class="features__svg" width="58.85" height="60">
+                        <use href="./images/sprite.svg#icon-mobile_learning_rect"></use>
+                    </svg>
+                    <svg class="features__svg_desc" width="100" height="102">
+                        <use href="./images/sprite.svg#icon-mobile_learning_rect_desc"></use>
+                    </svg>
+
+                    <p class="features__item_text">Современные методики обучения</p>
                 </li>
-                <li>
-                    <div class="features__item">
-                        <svg class="features__svg">
-                            <use href="./images/sprite.svg#icon-dollar_umbrella_rect"></use>
-                        </svg>
-                        <p class="features__item_text">Финансовая гарантия результата</p>
-                    </div>
+                <li class="features__item">
+                    <svg class="features__svg" width="58.85" height="60">
+                        <use href="./images/sprite.svg#icon-dollar_umbrella_rect"></use>
+                    </svg>
+                    <svg class="features__svg_desc" width="100" height="102">
+                        <use href="./images/sprite.svg#icon-dollar_umbrella_rect_desc"></use>
+                    </svg>
+
+                    <p class="features__item_text">Финансовая гарантия результата</p>
                 </li>
-                </div>
-            </ul>
+            </div>
+        </ul>
     </div>
 </section>
