Problems, realization fixes

--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -64,7 +64,7 @@
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
-    line-height: 1.7142;
+    line-height: 1.4285;
     /* identical to box height, or 171% */
     display: flex;
     align-items: center;
@@ -114,7 +114,8 @@
         padding-top: 100px;
     }
     .problems__item {
-        width: 300px;
+        width: 314px;
+        margin-bottom: 32px;
     }
     .problems__list {
         padding: 75px 124px 35px 100px;
@@ -138,5 +139,11 @@
     }
     .problems__picture {
         display: block;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:1279px) {
+    .problems__description.problems__description4 {
+        width: 209px;
     }
 }
