--- a/src/sass/layout/_realization.scss
+++ b/src/sass/layout/_realization.scss
@@ -136,6 +136,9 @@
   .realization__card {
     justify-content: center;
   }
+  .realization__description {
+    width: 267px;
+  }
 }
 
 @media screen and (min-width:768px) {
