возвращение марджинов на контейнер

--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -42,6 +42,10 @@
 .card-box {
   &:not(:last-child) {
     margin-bottom: 50px;
+
+    @include for-size(tablet) {
+      margin-bottom: 60px;
+    }
   }
 
   & .title-card-location {
