--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,161 +1,160 @@
-.hero{
-    background-color: getColor(background-main);
+.hero {
+  background-color: getColor(background-main);
 }
 
-.hero-section{
-    background-repeat: no-repeat;
+.hero-section {
+  background-repeat: no-repeat;
 
-    @media screen and (max-width: 739px) {
-        padding-top: 92px;
-        padding-bottom: 160px;
-    
-        background-image: url('./../images/hero/icecream/icecream-tablet@1x.png'),
-                          url('./../images/hero/eclipse.svg') ;
-        background-size: 171px 410px, 346px 344px;
-        background-position: left calc(50% + 40px) bottom,
-          left calc(50% + 45px) top 21px;
-    }
+  @media screen and (max-width: 739px) {
+    padding-top: 92px;
+    padding-bottom: 160px;
+
+    background-image: url('./../images/hero/icecream/icecream-tablet@1x.png'),
+      url('./../images/hero/eclipse.svg');
+    background-size: 171px 410px, 346px 344px;
+    background-position: left calc(50% + 40px) bottom,
+      left calc(50% + 16px) top 0px;
+  }
 }
 
 .header {
-    width: 100%;
+  width: 100%;
 }
 
-.header-navigation{
+.header-navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+
+  &__item {
+    padding-right: 35px;
+
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+
+  &__link {
+    font-size: 14px;
+    line-height: 1.28;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    color: getColor(white-color);
+
+    padding-top: 11px;
+    padding-bottom: 11px;
+
+    transition: color $animation;
+
+    &:hover,
+    &:focus {
+      color: getColor(title);
+    }
+  }
+
+  @media screen and (max-width: 1279px) {
+    display: none;
+  }
 }
 
-.nav-list{
+.btn-menu-open {
+  padding: 0;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 6px;
-    padding-bottom: 6px;
-  
-    &__item{
-        padding-right: 35px;
-
-        &:last-child{
-            padding-right: 0;
-        }
-    }
-   
-    &__link{
-        font-size: 14px;
-        line-height: 1.28;
-        display: flex;
-        align-items: center;
-        color: getColor(white-color);
-
-        padding-top: 11px;
-        padding-bottom: 11px;
-
-        transition: color $animation;
-
-        &:hover,
-        &:focus{
-        color: getColor(title);   
-        }
-    }
-    
-    @media screen and (max-width: 1279px) {
-        display:none;
-    }
-}
-
-.btn-menu-open{
-    padding:0;
-    
-    background-color: getColor(background-main);
+  background-color: getColor(background-main);
 }
 
 .nav-buttons {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+}
+
+.btn-purchase {
+  height: 44px;
+  width: 209px;
+
+  font-size: 16px;
+  line-height: 1.4;
+
+  border-radius: 22px;
+  border-width: 0;
+  color: getColor(title);
+  background-color: getColor(white-color);
+
+  margin-left: 30px;
+
+  &:focus,
+  &:hover {
+    background-color: getColor(secondary-text);
   }
 
-.btn-purchase{
-    height: 44px;
-    width: 209px;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
 
-    font-size: 16px;
-    line-height: 1.4;
+.menu-open {
+  margin-left: 12px;
+}
 
-    border-radius: 22px;
-    border-width: 0;
+.icon-open {
+  fill: getColor(title);
+}
+
+.hero-title {
+  margin: 0;
+  margin-bottom: 19px;
+  font-family: Titan One, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: getColor(white-color);
+
+  .text {
+    font-size: 42px;
     color: getColor(title);
-    background-color: getColor(white-color);
-
-    margin-left: 30px;
-
-    &:focus,
-    &:hover {
-      background-color: getColor(secondary-text);
-    }
-
-    @media screen and (max-width: 767px) {
-        display:none;
-    }
+  }
 }
 
-.menu-open{
-    margin-left: 12px;
+.hero-buttons {
+  padding: 0;
+  display: flex;
 }
 
-.icon-open{
-    fill: getColor(title);
-}
+.hero-button {
+  display: block;
+  height: 24px;
+  font-size: 8px;
+  line-height: 1.25;
 
+  border-radius: 20px;
+  border: none;
 
+  &.red {
+    width: 63px;
 
-.hero-title{
-    font-family: Titan One, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 26px;
-    line-height: 1.15;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
     color: getColor(white-color);
 
-    .text {
-        font-size: 42px;
-        color: getColor(title);  
-        }
+    background-color: getColor(title);
+  }
+
+  &.white {
+    width: 83px;
+    margin-left: 8px;
+    color: getColor(title);
+
+    background-color: getColor(white-color);
+  }
 }
-
-.hero-buttons{
-    display: flex;
-}
-
-.hero-button{
-    display: block;
-    height: 24px;
-    font-size: 8px;
-    line-height: 1.25;
-
-    border-radius: 20px;
-    border: none;
-
-    &.red{
-        width: 63px;
-     
-        color: getColor(white-color);
-
-        background-color: getColor(title); 
-    }
-
-    &.white{
-        width: 83px;
-        margin-left: 8px;
-        color: getColor(title); 
-
-        background-color: getColor(white-color)
-    }
-}
-
