--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -2,18 +2,12 @@
   background-color: $light-pink-color;
 }
 .hero-container {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-
-  padding-top: 193px;
-  padding-bottom: 160px;
-
   position: relative;
+  width: 100%;
+  overflow: hidden;
 
-  @media screen and (min-width: $mobile) {
-    width: $mobile;
+  @media screen and (max-width: $mobile-max) {
+    height: 502px;
   }
 
   @media screen and (min-width: $tablet) {
@@ -22,6 +16,8 @@
     padding-right: 34px;
     padding-top: 102px;
     padding-bottom: 34px;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (min-width: $desktop) {
     width: $desktop;
@@ -31,9 +27,23 @@
     padding-bottom: 56px;
   }
 }
+.hero-main-info {
+  display: block;
+  z-index: 5;
 
+  @media screen and (max-width: $mobile-max) {
+    position: absolute;
+    top: 55%;
+    left: 41%;
+    transform: translate(-50%, -50%);
+  }
+  @media screen and (min-width: $tablet) {
+    position: relative;
+  }
+}
 .hero-title {
   font-family: Titan One;
+  text-transform: uppercase;
   font-weight: 400;
   font-size: 26px;
   line-height: 1.14;
@@ -68,9 +78,6 @@
 }
 .hero-buttons-list {
   display: inline-flex;
-
-  position: relative;
-  z-index: 5;
 
   @media screen and (min-width: $tablet) {
     margin-bottom: 19px;
@@ -124,10 +131,9 @@
 
 .hero-img {
   width: 171px;
+  height: auto;
 
   position: absolute;
-  bottom: 0;
-  left: 117px;
 
   z-index: 4;
 
@@ -140,7 +146,14 @@
   animation-direction: alternate-reverse;
   animation-delay: -1s;
 
+  @media screen and (max-width: $mobile-max) {
+    bottom: -40%;
+    left: 63%;
+    transform: translate(-50%, -50%);
+  }
+
   @media screen and (min-width: $tablet) {
+    bottom: 0;
     left: 378px;
     width: 143px;
   }
@@ -371,8 +384,6 @@
   border-radius: 50%;
 
   position: absolute;
-  bottom: 75px;
-  left: 36px;
 
   z-index: 3;
 
@@ -382,6 +393,12 @@
   animation-iteration-count: 2;
   animation-direction: alternate-reverse;
   animation-delay: -2s;
+
+  @media screen and (max-width: $mobile-max) {
+    top: 50%;
+    left: 65%;
+    transform: translate(-50%, -50%);
+  }
 
   @media screen and (min-width: $tablet) {
     height: 323px;
