--- a/src/partials/traditions.html
+++ b/src/partials/traditions.html
@@ -1,5 +1,8 @@
-<section>
-    <div class="container traditions">
+<section class="traditions" id="traditions">
+    <div class="container trad-container">
+        <!-- <div class="background-milk"></div> -->
+        <div class="background-milk left"></div>
+        <div class="background-milk right"></div>
         <h2 class="trad-title">tradition and love</h2>
         <h3 class="trad-subtitle">how it’s made?</h3>
         <div class="trad-group">
