footer mobile ready

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,29 @@
 .footer {
-  padding-bottom: 2px;
+  position: relative;
+  padding-bottom: 25px;
   background-color: #fff5f6;
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 2px;
+  }
+}
+
+.footer::before {
+  display: block;
+  position: absolute;
+  content: '';
+
+  bottom: 88px;
+  right: 0;
+
+  width: 100%;
+  height: 1px;
+
+  background-color: #e1e1e1;
+
+  @media screen and (min-width: 1200px) {
+    bottom: 30px;
+  }
 }
 
 .footer-markup {
@@ -12,12 +35,20 @@
 }
 
 .footer-container-title {
+  @media screen and (min-width: 320px) {
+    margin-bottom: 43px;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-bottom: 106px;
   }
 }
 
 .footer-container-link {
+  @media screen and (min-width: 320px) {
+    margin-bottom: 65px;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-left: 257px;
   }
@@ -32,6 +63,10 @@
 
   color: #d41443;
 
+  @media screen and (min-width: 320px) {
+    width: 200px;
+  }
+
   @media screen and (min-width: 1200px) {
     font-size: 58px;
     line-height: 1.137;
@@ -40,7 +75,6 @@
 }
 
 .footer-suptitle {
-  margin-bottom: 15px;
   font-family: $secondary-font;
   font-weight: 400;
   font-size: 18px;
@@ -49,7 +83,13 @@
 
   color: #ffa5ba;
 
+  @media screen and (min-width: 320px) {
+    margin-bottom: 17px;
+    width: 232px;
+  }
+
   @media screen and (min-width: 1200px) {
+    margin-bottom: 15px;
     font-size: 30px;
     line-height: 1.133;
     letter-spacing: 0.04em;
@@ -57,12 +97,16 @@
 }
 
 .footer-social-container {
+  margin-left: auto;
   display: flex;
   width: 151px;
   justify-content: space-between;
 
+  @media screen and (min-width: 320px) {
+    margin-bottom: 46px;
+  }
+
   @media screen and (min-width: 1200px) {
-    margin-left: auto;
     margin-bottom: 50px;
   }
 }
@@ -76,14 +120,19 @@
   justify-content: center;
   align-items: center;
 
-  width: 34px;
-  height: 34px;
+  width: 32px;
+  height: 32px;
 
   color: #fff;
   border-radius: 50%;
   background: #fea5bb;
 
   transition: background 250ms linear;
+
+  @media screen and (min-width: 1200px) {
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .footer-social-link:hover,
@@ -104,6 +153,10 @@
   color: #000000;
   letter-spacing: 0.02em;
 
+  @media screen and (min-width: 320px) {
+    text-align: right;
+  }
+
   @media screen and (min-width: 1200px) {
     font-size: 16px;
     line-height: 186%;
@@ -121,4 +174,11 @@
   line-height: 152%;
 
   color: #907e82;
+
+  @media screen and (min-width: 320px) {
+    display: block;
+    width: 145px;
+    text-align: center;
+    margin: 0 auto;
+  }
 }
