--- a/css/main.css
+++ b/css/main.css
@@ -145,8 +145,32 @@ li {
 }
 
 .footer {
-  padding-bottom: 2px;
+  position: relative;
+  padding-bottom: 25px;
   background-color: #fff5f6;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    padding-bottom: 2px;
+  }
+}
+
+.footer::before {
+  display: block;
+  position: absolute;
+  content: '';
+  bottom: 88px;
+  right: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #e1e1e1;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer::before {
+    bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -157,9 +181,21 @@ li {
   }
 }
 
+@media screen and (min-width: 320px) {
+  .footer-container-title {
+    margin-bottom: 43px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-container-title {
     margin-bottom: 106px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .footer-container-link {
+    margin-bottom: 65px;
   }
 }
 
@@ -178,6 +214,12 @@ li {
   color: #d41443;
 }
 
+@media screen and (min-width: 320px) {
+  .footer-title {
+    width: 200px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-title {
     font-size: 58px;
@@ -187,7 +229,6 @@ li {
 }
 
 .footer-suptitle {
-  margin-bottom: 15px;
   font-family: "Titan One", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -196,8 +237,16 @@ li {
   color: #ffa5ba;
 }
 
+@media screen and (min-width: 320px) {
+  .footer-suptitle {
+    margin-bottom: 17px;
+    width: 232px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-suptitle {
+    margin-bottom: 15px;
     font-size: 30px;
     line-height: 1.133;
     letter-spacing: 0.04em;
@@ -205,14 +254,20 @@ li {
 }
 
 .footer-social-container {
+  margin-left: auto;
   display: flex;
   width: 151px;
   justify-content: space-between;
 }
 
+@media screen and (min-width: 320px) {
+  .footer-social-container {
+    margin-bottom: 46px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-social-container {
-    margin-left: auto;
     margin-bottom: 50px;
   }
 }
@@ -221,12 +276,19 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 34px;
-  height: 34px;
+  width: 32px;
+  height: 32px;
   color: #fff;
   border-radius: 50%;
   background: #fea5bb;
   transition: background 250ms linear;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-social-link {
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .footer-social-link:hover,
@@ -247,6 +309,12 @@ li {
   letter-spacing: 0.02em;
 }
 
+@media screen and (min-width: 320px) {
+  .footer-text-link {
+    text-align: right;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-text-link {
     font-size: 16px;
@@ -264,5 +332,14 @@ li {
   font-size: 14px;
   line-height: 152%;
   color: #907e82;
+}
+
+@media screen and (min-width: 320px) {
+  .footer-text {
+    display: block;
+    width: 145px;
+    text-align: center;
+    margin: 0 auto;
+  }
 }
 /*# sourceMappingURL=main.css.map */
