--- a/src/sass/layout/_how-we-do-it.scss
+++ b/src/sass/layout/_how-we-do-it.scss
@@ -156,13 +156,13 @@
   font-size: 12px;
   line-height: 1.67;
   letter-spacing: 0.08em;
-  color: var(--black-color);
+  color: var(--grey-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (max-width: 767px) {
-    padding: 0 7px;
-  }
+  // @media screen and (max-width: 767px) {
+  //   padding: 0 7px;
+  // }
 
   @media screen and (min-width: 767px) and (max-width: 1343px) {
     padding: 0 22px;
